# webdav

./: .gitignore  .gitmodules  Base64.h  CMakeLists.txt  ConfFile.cpp  ConfFile.h  Makefile  webdav-dist.cfg  webdav.cpp  webdav.cpp.org  webdav.sln  webdav.vcxproj  webdav.vcxproj.filters
.github/workflows/: cmake-multi-platform.yml
